--- a/letter_definition.ipynb
+++ b/letter_definition.ipynb
@@ -160,6 +160,41 @@
   {
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2025-02-03T12:38:02.735635Z",
+     "start_time": "2025-02-03T12:38:02.367181Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.isnull().sum()",
+   "id": "eff14ae8e572e538",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        0\n",
+       "0.1      0\n",
+       "0.2      0\n",
+       "0.3      0\n",
+       "0.4      0\n",
+       "        ..\n",
+       "0.644    0\n",
+       "0.645    0\n",
+       "0.646    0\n",
+       "0.647    0\n",
+       "0.648    0\n",
+       "Length: 785, dtype: int64"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 100
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
      "end_time": "2025-02-03T11:53:52.102868Z",
      "start_time": "2025-02-03T11:53:52.063921Z"
     }
