--- a/letter_definition.ipynb
+++ b/letter_definition.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "code",
    "source": [
     "# Чтение датасета.\n",
-    "df = pd.read_csv('dataset/A_Z_Handwritten_Data.csv')\n",
+    "df = pd.read_csv('your_dataset.csv')\n",
     "memory = df.memory_usage(deep=True).sum()\n",
     "df.info() # Имеет тип int64, который занимает 8 байт на число.\n",
     "print(f\"До преобразования: {memory / 1e9:.1f} GB\")"
